# pkb

./: .gitignore  ChangeLog.md  README.md  build.sh  makefile  pkb.cabal
backend/: Config.hs  Loader.hs  Main.hs  Notes.hs  Types.hs
backend/Data/: Note.hs
backend/Handler/: Notes.hs  Static.hs
backend/Pkb/: Static.hs
frontend/: elm-package.json  elm.json
frontend/src/: Highlight.elm  Main.elm  Note.elm  Notes.elm  Requests.elm  Types.elm
frontend/src/Notes/: Mock.elm
static/: index.html  style.css
