name: pkb
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
homepage: https://github.com/jhrcek/pkb
synopsis: Personal Knowledge Base
description:
    Web app for managing personal knowledge base
category: Web
author: Jan Hrček
extra-source-files:
    ChangeLog.md

source-repository head
    type: git
    location: https://github.com/jhrcek/pkb

executable pkb
    main-is: Main.hs
    build-depends:
        aeson -any,
        base -any,
        bytestring -any,
        data-default-class -any,
        directory -any,
        filepath -any,
        file-embed -any,
        optparse-applicative -any,
        scotty -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: backend
    other-modules:
        Data.Note
        Loader
        Config
        Pkb.Static
    ghc-options: -Wall
