cabal-version:      >=1.10
name:               pkb
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Jan Hrček
homepage:           https://github.com/jhrcek/pkb
synopsis:           Personal Knowledge Base
description:        Web app for managing personal knowledge base
category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/jhrcek/pkb

executable pkb
    main-is:          Main.hs
    hs-source-dirs:   backend
    other-modules:
        Data.Note
        Config
        Handler.Notes
        Handler.Static
        Loader
        Types

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aeson,
        base,
        bytestring,
        data-default-class,
        directory,
        filepath,
        file-embed,
        mtl,
        optparse-applicative,
        scotty,
        text
